# docs

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
tests/: test_docs.py
